добавил разделение по уровням доступа
пользователи с уровнем super могут делать все действия
пользователи с уровнем regular могут делать действия только с записями,
которые они сами создавали.
